--- a/static/styles.css
+++ b/static/styles.css
@@ -40,7 +40,7 @@ h1 {
 h2 {
     font-size: 2.5em;
     font-weight: bold;
-    color: #ADD8E6;
+    color: #90d5ff;
     margin-bottom: 20px;  /* Sníženo pro větší prostor nad tlačítkem */
 }
 
